# backend-em-django

./: README.md
mysite/: db.sqlite3  pyproject.toml
mysite/contacts/: urls.py  views.py
mysite/contacts/templates/contacts/: create.html
mysite/mysite/: admin.py  settings.py  urls.py
mysite/polls/: models.py
mysite/polls/templates/polls/: index.html
